--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   webview_flutter: ^2.0.13
+  provider : ^5.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
